// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Filters - snapshots Filters with active sent filter and memos 1`] = `
<View
  onLayout={[Function]}
  style={
    {
      "backgroundColor": "#011401",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <
      color="#c3c3c3"
      icon={
        {
          "icon": [
            384,
            512,
            [
              128473,
              10005,
              10006,
              10060,
              215,
              "close",
              "multiply",
              "remove",
              "times",
            ],
            "f00d",
            "M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z",
          ],
          "iconName": "xmark",
          "prefix": "fas",
        }
      }
      size={30}
      style={
        {
          "alignSelf": "flex-end",
          "marginRight": 20,
          "marginTop": 10,
        }
      }
    />
  </View>
  <Text
    style={
      {
        "alignSelf": "center",
        "color": "#c3c3c3",
        "fontSize": 15,
        "fontWeight": "400",
        "marginTop": 0,
        "opacity": 1,
        "paddingHorizontal": 10,
      }
    }
  >
    text translated
  </Text>
  <View
    style={
      {
        "display": "flex",
        "flexDirection": "column",
        "margin": 10,
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "alignItems": "center",
          "justifyContent": "flex-start",
          "width": "100%",
        }
      }
    >
      <View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "flex-start",
              "marginTop": 10,
              "rowGap": 10,
              "width": "90%",
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#18bd18",
                  "borderColor": "#18bd18",
                  "borderRadius": 15,
                  "borderWidth": 1,
                  "marginRight": 10,
                  "paddingHorizontal": 10,
                  "paddingVertical": 5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#040C17",
                    "fontWeight": "bold",
                    "opacity": 0.65,
                  }
                }
              >
                text translated
              </Text>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#040C17",
                  "borderColor": "#888888",
                  "borderRadius": 15,
                  "borderWidth": 1,
                  "marginRight": 10,
                  "paddingHorizontal": 10,
                  "paddingVertical": 5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#888888",
                    "fontWeight": "bold",
                    "opacity": 0.65,
                  }
                }
              >
                text translated
              </Text>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#040C17",
                  "borderColor": "#888888",
                  "borderRadius": 15,
                  "borderWidth": 1,
                  "marginRight": 10,
                  "paddingHorizontal": 10,
                  "paddingVertical": 5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#888888",
                    "fontWeight": "bold",
                    "opacity": 0.65,
                  }
                }
              >
                text translated
              </Text>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#18bd18",
                  "borderColor": "#18bd18",
                  "borderRadius": 15,
                  "borderWidth": 1,
                  "marginRight": 10,
                  "paddingHorizontal": 10,
                  "paddingVertical": 5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#040C17",
                    "fontWeight": "bold",
                    "opacity": 0.65,
                  }
                }
              >
                text translated
              </Text>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#18bd18",
                  "borderColor": "#18bd18",
                  "borderRadius": 15,
                  "borderWidth": 1,
                  "marginRight": 10,
                  "paddingHorizontal": 10,
                  "paddingVertical": 5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#040C17",
                    "fontWeight": "bold",
                    "opacity": 0.65,
                  }
                }
              >
                text translated
              </Text>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#18bd18",
                  "borderColor": "#18bd18",
                  "borderRadius": 15,
                  "borderWidth": 1,
                  "paddingHorizontal": 10,
                  "paddingVertical": 5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#040C17",
                    "fontWeight": "bold",
                    "opacity": 0.65,
                  }
                }
              >
                text translated
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexGrow": 1,
          "justifyContent": "center",
          "marginTop": 30,
          "marginVertical": 5,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#011401",
            "borderColor": "#18bd18",
            "borderRadius": 24,
            "borderWidth": 2,
            "justifyContent": "center",
            "maxWidth": "90%",
            "minHeight": 48,
            "minWidth": "30%",
            "opacity": 1,
            "padding": 0,
            "paddingLeft": 20,
            "paddingRight": 20,
            "width": "40%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 0,
              "minHeight": 48,
              "minWidth": 48,
              "padding": 0,
            }
          }
        >
          <Text
            style={
              {
                "color": "#18bd18",
                "fontSize": 16,
                "fontWeight": "600",
                "textAlign": "center",
                "textTransform": "none",
              }
            }
          >
            text translated
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#18bd18",
            "borderColor": "#18bd18",
            "borderRadius": 24,
            "borderWidth": 2,
            "justifyContent": "center",
            "marginLeft": 10,
            "maxWidth": "90%",
            "minHeight": 48,
            "minWidth": "30%",
            "opacity": 1,
            "padding": 0,
            "paddingLeft": 20,
            "paddingRight": 20,
            "width": "40%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 0,
              "minHeight": 48,
              "minWidth": 48,
              "padding": 0,
            }
          }
        >
          <Text
            style={
              {
                "color": "#011401",
                "fontSize": 16,
                "fontWeight": "600",
                "textAlign": "center",
                "textTransform": "none",
              }
            }
          >
            text translated
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Filters - snapshots Filters with no active filters 1`] = `
<View
  onLayout={[Function]}
  style={
    {
      "backgroundColor": "#011401",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <
      color="#c3c3c3"
      icon={
        {
          "icon": [
            384,
            512,
            [
              128473,
              10005,
              10006,
              10060,
              215,
              "close",
              "multiply",
              "remove",
              "times",
            ],
            "f00d",
            "M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z",
          ],
          "iconName": "xmark",
          "prefix": "fas",
        }
      }
      size={30}
      style={
        {
          "alignSelf": "flex-end",
          "marginRight": 20,
          "marginTop": 10,
        }
      }
    />
  </View>
  <Text
    style={
      {
        "alignSelf": "center",
        "color": "#c3c3c3",
        "fontSize": 15,
        "fontWeight": "400",
        "marginTop": 0,
        "opacity": 1,
        "paddingHorizontal": 10,
      }
    }
  >
    text translated
  </Text>
  <View
    style={
      {
        "display": "flex",
        "flexDirection": "column",
        "margin": 10,
      }
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "alignItems": "center",
          "justifyContent": "flex-start",
          "width": "100%",
        }
      }
    >
      <View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "flex-start",
              "marginTop": 10,
              "rowGap": 10,
              "width": "90%",
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#040C17",
                  "borderColor": "#888888",
                  "borderRadius": 15,
                  "borderWidth": 1,
                  "marginRight": 10,
                  "paddingHorizontal": 10,
                  "paddingVertical": 5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#888888",
                    "fontWeight": "bold",
                    "opacity": 0.65,
                  }
                }
              >
                text translated
              </Text>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#040C17",
                  "borderColor": "#888888",
                  "borderRadius": 15,
                  "borderWidth": 1,
                  "marginRight": 10,
                  "paddingHorizontal": 10,
                  "paddingVertical": 5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#888888",
                    "fontWeight": "bold",
                    "opacity": 0.65,
                  }
                }
              >
                text translated
              </Text>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#040C17",
                  "borderColor": "#888888",
                  "borderRadius": 15,
                  "borderWidth": 1,
                  "marginRight": 10,
                  "paddingHorizontal": 10,
                  "paddingVertical": 5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#888888",
                    "fontWeight": "bold",
                    "opacity": 0.65,
                  }
                }
              >
                text translated
              </Text>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#040C17",
                  "borderColor": "#888888",
                  "borderRadius": 15,
                  "borderWidth": 1,
                  "marginRight": 10,
                  "paddingHorizontal": 10,
                  "paddingVertical": 5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#888888",
                    "fontWeight": "bold",
                    "opacity": 0.65,
                  }
                }
              >
                text translated
              </Text>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#040C17",
                  "borderColor": "#888888",
                  "borderRadius": 15,
                  "borderWidth": 1,
                  "marginRight": 10,
                  "paddingHorizontal": 10,
                  "paddingVertical": 5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#888888",
                    "fontWeight": "bold",
                    "opacity": 0.65,
                  }
                }
              >
                text translated
              </Text>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#040C17",
                  "borderColor": "#888888",
                  "borderRadius": 15,
                  "borderWidth": 1,
                  "paddingHorizontal": 10,
                  "paddingVertical": 5,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#888888",
                    "fontWeight": "bold",
                    "opacity": 0.65,
                  }
                }
              >
                text translated
              </Text>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexGrow": 1,
          "justifyContent": "center",
          "marginTop": 30,
          "marginVertical": 5,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#011401",
            "borderColor": "#18bd18",
            "borderRadius": 24,
            "borderWidth": 2,
            "justifyContent": "center",
            "maxWidth": "90%",
            "minHeight": 48,
            "minWidth": "30%",
            "opacity": 1,
            "padding": 0,
            "paddingLeft": 20,
            "paddingRight": 20,
            "width": "40%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 0,
              "minHeight": 48,
              "minWidth": 48,
              "padding": 0,
            }
          }
        >
          <Text
            style={
              {
                "color": "#18bd18",
                "fontSize": 16,
                "fontWeight": "600",
                "textAlign": "center",
                "textTransform": "none",
              }
            }
          >
            text translated
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#18bd18",
            "borderColor": "#18bd18",
            "borderRadius": 24,
            "borderWidth": 2,
            "justifyContent": "center",
            "marginLeft": 10,
            "maxWidth": "90%",
            "minHeight": 48,
            "minWidth": "30%",
            "opacity": 1,
            "padding": 0,
            "paddingLeft": 20,
            "paddingRight": 20,
            "width": "40%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 0,
              "minHeight": 48,
              "minWidth": 48,
              "padding": 0,
            }
          }
        >
          <Text
            style={
              {
                "color": "#011401",
                "fontSize": 16,
                "fontWeight": "600",
                "textAlign": "center",
                "textTransform": "none",
              }
            }
          >
            text translated
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
